test/corpus/module/error_exposing_everything.txt
================================
Module Error Exposing Everything
================================

module Foo exposing (.)

---

(source_file
  (module
    (module_name)
    (exposing
      (ERROR
        (UNEXPECTED ')')))))
