test/corpus/module/error_exposing_everything_comma.txt
======================================
Module Error Exposing Everything Comma
======================================

module Foo exposing (.. ,)

---

(source_file
  (module
    (module_name)
    (exposing
      (spread)
      (MISSING identifier))))
