test/corpus/module/error_exposing_identities.txt
================================
Module Error Exposing Identities
================================

module Foo exposing (Hello,wow,)

---

(source_file
  (module
    (module_name)
    (exposing
      (identifier)
      (identifier)
      (MISSING identifier))))
