test/corpus/module/error_exposing_identity.txt
==============================
Module Error Exposing Identity
==============================

module Foo exposing (Hello,)

---

(source_file
  (module
    module_name: (module_name)
    exposing: (exposing
      (identifier)
      (MISSING identifier))))
