test/corpus/module/error_exposing_types_comma.txt
=================================
Module Error Exposing Types Comma
=================================

module Foo exposing (Hello,wow,Cool(..),)

---

(source_file
  (module
    (module_name)
    (exposing
      (identifier)
      (identifier)
      (type_with_constructors
        (identifier)
        (spread)
      )
      (MISSING identifier)
    )))
