test/corpus/module/error_lower_case_chained_name.txt
===================================
Module Error Lowercase Chained Name
===================================

module App.is.cool exposing ()

---

(source_file
  (module
    (module_name)
    (ERROR (UNEXPECTED 'i'))
    (exposing)))
