test/corpus/module/error_lower_case_name.txt
===========================
Module Error Lowercase Name
===========================

module apP exposing (Msg(Increment, Decrement, Reset))

---

(source_file
  (module
    (ERROR (UNEXPECTED 'a'))
    module_name: (module_name)
    exposing: (exposing
      (type_with_constructors
        name: (identifier)
        constructor: (identifier)
        constructor: (identifier)
        constructor: (identifier)))))
