test/corpus/module/error_multiple_lower_case_name.txt
===================================
Module Error Multiple Lowercase Chained Name
===================================

module App.is.So.cool exposing ()

---

(source_file
  (module
    (module_name)
    (ERROR
      (UNEXPECTED 'i')
      (module_name)
      (UNEXPECTED 'c'))
    (exposing)))
