test/corpus/module/exposing_everything.txt
==========================
Module Exposing Everything
==========================

module MainA exposing (..)

---

(source_file
  (module
    module_name: (identifier)
    exposing: (exposing
      (spread)
    )))
