test/corpus/module/exposing_everything_and_identities.txt
=========================================
Module Exposing Everything And Identities
=========================================

module String exposing (.., toInt, fromInt)

---

(source_file
  (module
    module_name: (module_name)
    exposing: (exposing
      (spread)
      (identifier)
      (identifier))))
