test/corpus/module/exposing_everything_and_identity.txt
========================================
Module Exposing Everything And Identity
========================================

module String exposing (.., toInt)

---

(source_file
  (module
    module_name: (module_name)
    exposing: (exposing
      (spread)
      (identifier))))
