test/corpus/module/exposing_everything_multiple_times.txt
=========================================
Module Exposing Everything Multiple Times
=========================================

module MainA exposing (.., .., ..)

---

(source_file
  (module
    module_name: (module_name)
    exposing: (exposing
      (spread)
      (spread)
      (spread)
    )))
