test/corpus/module/exposing_identities.txt
==========================
Module Exposing Identities
==========================

module MainA exposing (main, core, foo, bar)

---

(source_file
  (module
    module_name: (identifier)
    exposing: (exposing
      (identifier)
      (identifier)
      (identifier)
      (identifier)
    )))
