test/corpus/module/exposing_identities_and_everything.txt
=========================================
Module Exposing Identities And Everything
=========================================

module Int exposing (fromString, fromChar, ..)

---

(source_file
  (module
    module_name: (identifier)
    exposing: (exposing
      (identifier)
      (identifier)
      (spread))))
