test/corpus/module/exposing_identity.txt
========================
Module Exposing Identity
========================

module MainA exposing (main)

---

(source_file
  (module
    module_name: (identifier)
    exposing: (exposing
      (identifier)
    )))
