test/corpus/module/exposing_identity_and_everything.txt
=======================================
Module Exposing Identity And Everything
=======================================

module Core exposing (main, ..)

---

(source_file
  (module
    module_name: (module_name)
    exposing: (exposing
      (identifier)
      (spread)
    )))
