test/corpus/module/exposing_identity_and_types.txt
==================================
Module Exposing Identity And Types
==================================

module App exposing (view, Msg(Increment, Decrement))

---

(source_file
  (module
    module_name: (identifier)
    exposing: (exposing
      (identifier)
      (type_with_constructors
        name: (identifier)
        constructor: (identifier)
        constructor: (identifier)))))
