test/corpus/module/exposing_multiple_types.txt
==============================
Module Exposing Multiple Types
==============================

module App exposing (Msg(Increment, Decrement, Reset), Other(..))

---

(source_file
  (module
    module_name: (module_name)
    exposing: (exposing
      (type_with_constructors
        name: (identifier)
        constructor: (identifier)
        constructor: (identifier)
        constructor: (identifier))
      (type_with_constructors
        name: (identifier)
        constructor: (spread)))))
