test/corpus/module/exposing_types.txt
=====================
Module Exposing Types
=====================

module App exposing (Msg(Increment, Decrement, Reset))

---

(source_file
  (module
    module_name: (identifier)
    exposing: (exposing
      (type_with_constructors
        name: (identifier)
        constructor: (identifier)
        constructor: (identifier)
        constructor: (identifier)))))
