test/corpus/type_expression/type_arg_not_used.txt
=================
Type Arg Not Used
=================

type Foo a = Foo

---

(source_file
  (type_definition
    name: (Identifier)
    args: (identifier)
    value: (custom_type
      name: (Identifier))))
