test/corpus/type_expression/type_args.txt
=========
Type Args
=========

type Foo a b = Foo a b

---

(source_file
  (type_definition
    name: (Identifier)
    args: (identifier)
    args: (identifier)
    value: (custom_type
      name: (Identifier)
      args: (identifier)
      args: (identifier))))
