test/corpus/type_expression/type_chained_multiple_times.txt
============================
Types Chained Multiple Times
============================

type Foo = Int -> Int -> Int -> String

---

(source_file
  (type_definition
    name: (Identifier)
    value: (type_chain
      left: (type_chain
        left: (type_chain
          left: (primative)
          right: (primative))
        right: (primative))
      right: (primative))))
      
